Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/Reference_Period_Job__c.object-meta.xml
<CustomObject>
    <description>Represents one job role in a particular reference period week.</description>
    <label>Reference Period Job</label>
    <nameField>
        <displayFormat>RPJ-{0}</displayFormat>
        <label>Reference Period Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Period Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>