Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/fields/Break__c.field-meta.xml
<CustomField>
    <fullName>Break__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Break hours for this specific job.</inlineHelpText>
    <label>Break</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>