Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/fields/Duty_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duty_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Duty hours for this specific job</inlineHelpText>
    <label>Duty Hours</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>