Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Role</label>
    <referenceTo>sirenum__Team__c</referenceTo>
    <relationshipLabel>Reference Period Jobs</relationshipLabel>
    <relationshipName>Reference_Period_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>