Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/fields/Period_of_Availability__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Availability__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>POA hours for this specific job.</inlineHelpText>
    <label>Period of Availability</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>