Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/fields/Reference_Period_Week__c.field-meta.xml
<CustomField>
    <fullName>Reference_Period_Week__c</fullName>
    <label>Reference Period Week</label>
    <referenceTo>Reference_Period_Week__c</referenceTo>
    <relationshipLabel>Reference Period Jobs</relationshipLabel>
    <relationshipName>Reference_Period_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>