Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet</label>
    <referenceTo>sirenum__Timesheet__c</referenceTo>
    <relationshipLabel>Reference Period Jobs</relationshipLabel>
    <relationshipName>Reference_Period_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>