Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/validationRules/Break_Hours_Maximum.validationRule-meta.xml
<ValidationRule>
    <fullName>Break_Hours_Maximum</fullName>
    <active>true</active>
    <description>Maximum break hours for specific job.</description>
    <errorConditionFormula>Break__c  &gt; 100 ||
Break__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Break__c</errorDisplayField>
    <errorMessage>Value must be between 0 and 100 hours.</errorMessage>
</ValidationRule>