Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/validationRules/Duty_Hours_Min_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Duty_Hours_Min_Max</fullName>
    <active>true</active>
    <description>Minimum and maximum hours a driver can work.</description>
    <errorConditionFormula>Duty_Hours__c  &lt; 0 ||
Duty_Hours__c  &gt; 200</errorConditionFormula>
    <errorDisplayField>Duty_Hours__c</errorDisplayField>
    <errorMessage>Value must be between 0 and 200 hours.</errorMessage>
</ValidationRule>