Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Job__c/validationRules/Period_Of_Availability_Maximum.validationRule-meta.xml
<ValidationRule>
    <fullName>Period_Of_Availability_Maximum</fullName>
    <active>true</active>
    <description>Maximum period of availability drivers can work during a week.</description>
    <errorConditionFormula>Period_of_Availability__c  &gt; 200 || 
Period_of_Availability__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Period_of_Availability__c</errorDisplayField>
    <errorMessage>Value must be between 0 and 200 hours.</errorMessage>
</ValidationRule>